Fix auto-approve workflow: use pull_request_target for elevated permissions

--- a/.github/workflows/auto-approve-docs.yml
+++ b/.github/workflows/auto-approve-docs.yml
@@ -1,7 +1,7 @@
 name: Auto-approve docs-only PRs
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, synchronize, labeled]
 
 permissions:
@@ -12,17 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'docs-only')
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
       - name: Check if only docs changed
         id: check
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          FILES=$(git diff --name-only origin/${{ github.event.pull_request.base.ref }}...HEAD)
+          FILES=$(gh pr diff "${{ github.event.pull_request.number }}" --repo "${{ github.repository }}" --name-only)
           echo "Changed files:"
           echo "$FILES"
-          # Allow: *.md, docs/*, LICENSE, .github/workflows/auto-approve-docs.yml
+          # Allow: *.md, docs/*, LICENSE, *.txt
           NON_DOC=$(echo "$FILES" | grep -vE '\.(md|txt)$' | grep -vE '^docs/' | grep -vE '^LICENSE$' || true)
           if [ -z "$NON_DOC" ]; then
             echo "docs_only=true" >> "$GITHUB_OUTPUT"
@@ -33,6 +31,6 @@ jobs:
 
       - name: Auto-approve
         if: steps.check.outputs.docs_only == 'true'
-        run: gh pr review "${{ github.event.pull_request.number }}" --approve --body "Auto-approved: docs-only change"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh pr review "${{ github.event.pull_request.number }}" --repo "${{ github.repository }}" --approve --body "Auto-approved: docs-only change"
